--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-loading-indicators": "^1.0.1",
     "react-router-dom": "^7.7.0",
     "tailwind-merge": "^3.3.1",
